2007-01-11  Akim Demaille  <demaille@gostai.com>

	Update uobject
	* src/uvalue.cc: Adjust.

2007-01-11  Matthieu Nottale  <nottale@gostai.com>

	Add missing variable initialisation
	* src/parser/uparser.cc: Initialise filename_ in ctor.

2007-01-11  Akim Demaille  <demaille@gostai.com>

	Coding style
	* src/ueventmatch.cc, src/ueventmatch.hh: Improve the coding
	style: scopes, ctors, for loops, useless braces and parens.
	The usual stuff.

2007-01-11  Akim Demaille  <demaille@gostai.com>

	UEventCompoundType
	* src/utypes.hh (UEventCompoundType): Move to.
	* src/ueventcompound.hh (UEventCompound::Type): here.
	* src/ueventcompound.cc: Adjust.
	Also, use switch when that's more appropriate.
	And SHORTEN THE SCOPES!
	* src/uexpression.cc: Adjust.

2007-01-11  Akim Demaille  <demaille@gostai.com>

	simplify (UCommand_TREE)
	* src/uconnection.cc (simplify): New.
	(UConnection::execute): Use it.

2007-01-11  Akim Demaille  <demaille@gostai.com>

	Coding style
	* src/ucommandqueue.cc: Shorten scopes.
	Use switch where appropriate.
	Use array notations where more appropriate than pointers.

2007-01-11  Akim Demaille  <demaille@gostai.com>

	libport up
	* src/uconnection.cc, src/uconnection.hh,
	* src/userver.cc, src/userver.hh: Adjust.

2006-12-29  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix includes.
	* src/ucommand.hh: include cstdarg.

2006-12-29  Akim Demaille  <akim.demaille@free.fr>

	Nuke two warnings
	* src/uexpression.cc: Provide defaults to two switches.

2006-12-29  Akim Demaille  <akim.demaille@free.fr>

	Use abort to please gcc
	* src/ucomplaints.cc: instead of continuing the execution.

2006-12-29  Akim Demaille  <akim.demaille@free.fr>

	More send_error
	None of these are exercised by the test suite...
	* src/ucommand.hh (send_error): Now exported.
	* src/ucommand.cc: Adjust.
	* src/uvariablename.cc: Use it.

2006-12-29  Akim Demaille  <akim.demaille@free.fr>

	UVariableName::UDeriveType
	* src/utypes.hh (UDeriveType): Move to...